--- a/scripts/adopt-a-drain/02.basin.buddy.users.ipynb
+++ b/scripts/adopt-a-drain/02.basin.buddy.users.ipynb
@@ -4,9 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# MOVED TO ADOPT-A-DRAIN\n",
+    "\n",
     "# Create use accounts\n",
     "# Adopt Drains\n",
     "\n",
+    "* This is a one off import\n",
+    "* can be run over and over\n",
     "move user_id from Users into Basin_Users\n",
     "\n",
     "./users\n",
@@ -16,9 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -57,9 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -501,7 +501,7 @@
     "    pw = helper.get_temp_password()\n",
     "    print('INSERT into Users (email,first_name,last_name) values (\\'{}\\', \\'{}\\', \\'{}\\', \\'{}\\')'.format(em,fn,ln,pw) )\n",
     "   \n",
-    "    print\n",
+    "    \n",
     "    \n",
     "    "
    ]
@@ -525,7 +525,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -539,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
