--- a/scripts/adopt-a-drain/01.Dev.Process.ipynb
+++ b/scripts/adopt-a-drain/01.Dev.Process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -70,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OUTPUT_FILE_NAME:  grb_drains-2019-04-03.csv\n",
+      "OUTPUT_FILE_NAME:  grb_drains-2019-04-05.csv\n",
       "kill log:  ./maintainer/maintainer-config.json\n"
      ]
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,20 +483,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "raw folder  /Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/00-04-april-data/data.world/raw-data/adopt-a-drain\n",
-      "['/Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/00-04-april-data/data.world/raw-data/adopt-a-drain/grb_april_1_3_29_2019.csv']\n",
+      "raw folder  /Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/04-add-small-version/data.world/raw-data/adopt-a-drain\n",
+      "['/Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/04-add-small-version/data.world/raw-data/adopt-a-drain/grb_april_1_3_29_2019.csv']\n",
       "-----------------------------------\n",
-      "raw:  /Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/00-04-april-data/data.world/raw-data/adopt-a-drain/grb_april_1_3_29_2019.csv\n",
+      "raw:  /Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/04-add-small-version/data.world/raw-data/adopt-a-drain/grb_april_1_3_29_2019.csv\n",
       "-----------------------------------\n",
-      "* clean_column_names: 0.01696467399597168 sec\n",
-      "* remove_obvious_outliers: 0.009083032608032227 sec\n"
+      "* clean_column_names: 0.01604294776916504 sec\n",
+      "* remove_obvious_outliers: 0.008656978607177734 sec\n"
      ]
     },
     {
@@ -504,7 +504,7 @@
       "text/markdown": [
        "\n",
        "# CSV Process: What Happened?\n",
-       "* input:  /Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/00-04-april-data/data.world/raw-data/adopt-a-drain/grb_april_1_3_29_2019.csv\n",
+       "* input:  /Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/04-add-small-version/data.world/raw-data/adopt-a-drain/grb_april_1_3_29_2019.csv\n",
        "* input: 54091 observations\n",
        "* input: columns ['FID' 'SUBTYPE' 'JURISDICTI' 'OWNER' 'SOURCE' 'LOCAL_ID' 'FACILITYID'\n",
        " 'Lat' 'Long' 'Subbasin' 'GID']\n",
@@ -515,16 +515,15 @@
        "\n",
        "# Combined\n",
        "* duplicates: dropped 10074 duplicate asset ids\n",
-       "* deleted /Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/00-04-april-data/data.world/clean-data/adopt-a-drain/grb_drains-2019-04-03.csv \n",
        "* inter-output: columns ['dr_subtype' 'dr_jurisdiction' 'dr_owner' 'dr_lat' 'dr_lon'\n",
        " 'dr_subwatershed' 'dr_asset_id' 'dr_type']\n",
-       "* inter-output: 44017 obs to /Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/00-04-april-data/data.world/clean-data/adopt-a-drain/grb_drains-2019-04-03.csv"
+       "* inter-output: 44017 obs to /Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/04-add-small-version/data.world/clean-data/adopt-a-drain/grb_drains-2019-04-05.csv"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,26 +716,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/00-04-april-data/data.world/clean-data/adopt-a-drain/grb_drains-2019-04-03.csv\n",
-      "/Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/00-04-april-data/data.world/clean-data/adopt-a-drain/grb_drains.csv\n"
+      "/Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/04-add-small-version/data.world/clean-data/adopt-a-drain/grb_drains-2019-04-05.csv\n",
+      "/Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/04-add-small-version/data.world/clean-data/adopt-a-drain/grb_drains.csv\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/jameswilfong/Documents/Github/CitizenLabs/00-Data-World/00-04-april-data/data.world/clean-data/adopt-a-drain/grb_drains.csv'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -750,7 +739,12 @@
     "print(ifn)\n",
     "print(ofn)\n",
     "\n",
-    "copyfile(ifn, ofn)\n"
+    "copyfile(ifn, ofn)\n",
+    "# set up a smaller version of file\n",
+    "tfn = '{}/{}'.format(helper.get_test_version_folder(), COPY_FILE_NAME)\n",
+    "#df_small = df_source.query(\"dr_jurisdiction = 'City of Grand Rapids'\")\n",
+    "df_small=df_source.query(\"dr_jurisdiction == 'City of Grand Rapids'\").head(5000)\n",
+    "df_small.to_csv( tfn, index=False)"
    ]
   },
   {
