load-spring-lake

--- a/scripts/adopt-a-drain/01.Dev.Process.ipynb
+++ b/scripts/adopt-a-drain/01.Dev.Process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -426,35 +426,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "raw folder  /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/01-add-xls-33/data.world/raw-data/adopt-a-drain\n",
+      "raw folder  /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/03-load-spring-lake/data.world/raw-data/adopt-a-drain\n",
       "--------\n",
-      "/Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/01-add-xls-33/data.world/raw-data/adopt-a-drain/CatchBasins_7_17_2019.xls\n",
+      "/Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/03-load-spring-lake/data.world/raw-data/adopt-a-drain/CatchBasins_7_17_2019.xls\n",
       "xls2csv 1\n",
-      "output: /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/01-add-xls-33/data.world/raw-data/adopt-a-drain/CatchBasins_7_17_2019.xls.csv\n",
+      "output: /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/03-load-spring-lake/data.world/raw-data/adopt-a-drain/CatchBasins_7_17_2019.xls.csv\n",
       "xls2csv out\n",
       "-----------------------------------\n",
-      "raw:  /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/01-add-xls-33/data.world/raw-data/adopt-a-drain/CatchBasins_7_17_2019.xls.csv\n",
+      "raw:  /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/03-load-spring-lake/data.world/raw-data/adopt-a-drain/CatchBasins_7_17_2019.xls.csv\n",
       "-----------------------------------\n",
-      "* clean_column_names: 0.0004029273986816406 sec\n",
+      "* clean_column_names: 0.0004909038543701172 sec\n",
       "['del_fid' 'dr_subtype' 'dr_jurisdiction' 'dr_owner' 'del_source'\n",
       " 'dr_local_id' 'dr_facility_id' 'dr_lat' 'dr_lon' 'dr_subwatershed'\n",
       " 'source_code' 'dr_asset_id' 'dr_type']\n",
-      "* remove_obvious_outliers: 0.0022330284118652344 sec\n",
+      "* remove_obvious_outliers: 0.002733945846557617 sec\n",
       "-----------------------------------\n",
-      "raw:  /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/01-add-xls-33/data.world/raw-data/adopt-a-drain/grb_april_1_3_29_2019.csv\n",
+      "raw:  /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/03-load-spring-lake/data.world/raw-data/adopt-a-drain/grb_april_1_3_29_2019.csv\n",
       "-----------------------------------\n",
-      "* clean_column_names: 0.008844852447509766 sec\n",
+      "* clean_column_names: 0.006867170333862305 sec\n",
       "['del_fid' 'dr_subtype' 'dr_jurisdiction' 'dr_owner' 'del_source'\n",
       " 'dr_local_id' 'dr_facility_id' 'dr_lat' 'dr_lon' 'dr_subwatershed'\n",
       " 'del_gid' 'source_code' 'dr_asset_id' 'dr_type']\n",
-      "* remove_obvious_outliers: 0.006814241409301758 sec\n"
+      "* remove_obvious_outliers: 0.007161140441894531 sec\n"
      ]
     },
     {
@@ -462,7 +462,7 @@
       "text/markdown": [
        "\n",
        "# CSV Process: What Happened?\n",
-       "* input:  /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/01-add-xls-33/data.world/raw-data/adopt-a-drain/CatchBasins_7_17_2019.xls.csv\n",
+       "* input:  /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/03-load-spring-lake/data.world/raw-data/adopt-a-drain/CatchBasins_7_17_2019.xls.csv\n",
        "* input: 1510 observations\n",
        "* input: columns ['FID' 'SUBTYPE' 'JURISDICTI' 'OWNER' 'SOURCE' 'LOCAL_ID' 'FACILITYID'\n",
        " 'Lat' 'Long' 'Subbasin']\n",
@@ -472,7 +472,7 @@
        "* outlier: Remove 0 observations too far north or south.\n",
        "\n",
        "# CSV Process: What Happened?\n",
-       "* input:  /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/01-add-xls-33/data.world/raw-data/adopt-a-drain/grb_april_1_3_29_2019.csv\n",
+       "* input:  /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/03-load-spring-lake/data.world/raw-data/adopt-a-drain/grb_april_1_3_29_2019.csv\n",
        "* input: 54091 observations\n",
        "* input: columns ['FID' 'SUBTYPE' 'JURISDICTI' 'OWNER' 'SOURCE' 'LOCAL_ID' 'FACILITYID'\n",
        " 'Lat' 'Long' 'Subbasin' 'GID']\n",
@@ -483,15 +483,16 @@
        "\n",
        "# Combined\n",
        "* duplicates: dropped 10076 duplicate asset ids\n",
+       "* deleted /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/03-load-spring-lake/data.world/clean-data/adopt-a-drain/grb_drains-2019-08-017.csv \n",
        "* inter-output: columns ['dr_subtype' 'dr_jurisdiction' 'dr_owner' 'dr_lat' 'dr_lon'\n",
        " 'dr_subwatershed' 'dr_asset_id' 'dr_type']\n",
-       "* inter-output: 45525 obs to /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/01-add-xls-33/data.world/clean-data/adopt-a-drain/grb_drains-2019-08-017.csv"
+       "* inter-output: 45525 obs to /Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/03-load-spring-lake/data.world/clean-data/adopt-a-drain/grb_drains-2019-08-017.csv"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,11 +683,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/03-load-spring-lake/data.world/clean-data/adopt-a-drain/grb_drains-2019-08-017.csv\n",
+      "/Users/jameswilfong/Documents/Github/Wilfongjt/01-AAD-data-world/01-In-Progress/03-load-spring-lake/data.world/clean-data/adopt-a-drain/grb_drains.csv\n"
+     ]
+    }
+   ],
    "source": [
     "from shutil import copyfile\n",
     "OUTPUT_FILE_NAME\n",
